# planetsProject/controllers/planets.js
@@ -18,60 +18,64 @@ const getSingle = async (req, res) => {
   });
 };
 
-// const createContact = async (req, res) => {
-//   const contact = {
-    // firstName: req.body.firstName,
-    // lastName: req.body.lastName,
-    // email: req.body.email,
-    // favoriteColor: req.body.favoriteColor,
-    // birthday: req.body.birthday
-//   };
-//   const response = await mongodb.getDb().db().collection('planets').insertOne(planet);
-//   if (response.acknowledged) {
-//     res.status(201).json(response);
-//   } else {
-//     res.status(500).json(response.error || 'Some error occurred while creating the planet.');
-//   }
-// };
+const createPlanets = async (req, res) => {
+  const contact = {
+    name: req.body.name,
+    numberOrder: req.body.numberOrder,
+    distanceFromSun: req.body.distanceFromSun,
+    temperature: req.body.temperature,
+    dayLength: req.body.dayLength,
+    yearLength: req.body.yearLength,
+    numberOfMoons: req.body.numberOfMoons
+  };
+  const response = await mongodb.getDb().db().collection('planets').insertOne(planet);
+  if (response.acknowledged) {
+    res.status(201).json(response);
+  } else {
+    res.status(500).json(response.error || 'Some error occurred while creating the planet.');
+  }
+};
 
-// const updateContact = async (req, res) => {
-//   const userId = new ObjectId(req.params.id);
-  // be aware of updateOne if you only want to update specific fields
-//   const contact = {
-//     firstName: req.body.firstName,
-//     lastName: req.body.lastName,
-//     email: req.body.email,
-//     favoriteColor: req.body.favoriteColor,
-//     birthday: req.body.birthday
-//   };
-//   const response = await mongodb
-//     .getDb()
-//     .db()
-//     .collection('contacts')
-//     .replaceOne({ _id: userId }, contact);
-//   console.log(response);
-//   if (response.modifiedCount > 0) {
-//     res.status(204).send();
-//   } else {
-//     res.status(500).json(response.error || 'Some error occurred while updating the contact.');
-//   }
-// };
+const updatePlanets = async (req, res) => {
+  const userId = new ObjectId(req.params.id);
+  //be aware of updateOne if you only want to update specific fields
+  const planets = {
+    name: req.body.name,
+    numberOrder: req.body.numberOrder,
+    distanceFromSun: req.body.distanceFromSun,
+    temperature: req.body.temperature,
+    dayLength: req.body.dayLength,
+    yearLength: req.body.yearLength,
+    numberOfMoons: req.body.numberOfMoons
+  };
+  const response = await mongodb
+    .getDb()
+    .db()
+    .collection('planets')
+    .replaceOne({ _id: userId }, contact);
+  console.log(response);
+  if (response.modifiedCount > 0) {
+    res.status(204).send();
+  } else {
+    res.status(500).json(response.error || 'Some error occurred while updating the contact.');
+  }
+};
 
-// const deleteContact = async (req, res) => {
-//   const userId = new ObjectId(req.params.id);
-//   const response = await mongodb.getDb().db().collection('contacts').remove({ _id: userId }, true);
-//   console.log(response);
-//   if (response.deletedCount > 0) {
-//     res.status(204).send();
-//   } else {
-//     res.status(500).json(response.error || 'Some error occurred while deleting the contact.');
-//   }
-// };
+const deletePlanets = async (req, res) => {
+  const userId = new ObjectId(req.params.id);
+  const response = await mongodb.getDb().db().collection('planets').remove({ _id: userId }, true);
+  console.log(response);
+  if (response.deletedCount > 0) {
+    res.status(204).send();
+  } else {
+    res.status(500).json(response.error || 'Some error occurred while deleting the contact.');
+  }
+};
 
 module.exports = {
   getAll,
   getSingle,
-//   createContact,
-//   updateContact,
-//   deleteContact
+  createPlanets,
+  updatePlanets,
+  deletePlanets
 };
